fixed letter spacing

--- a/src/pages/TicketBooking/TicketBooking.module.css
+++ b/src/pages/TicketBooking/TicketBooking.module.css
@@ -19,7 +19,7 @@
   font-size: 7.125rem;
   max-width: 70%;
   font-weight: 700;
-  letter-spacing: 0.17813rem;
+  /* letter-spacing: 0.17813rem; */
   text-transform: uppercase;
   color: var(--dark-brown-color);
 }
